# TippaBot

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  debug_website.sh  docker-compose.yml  fast_market.cpp  health_check.sh  prd.txt  requirements.txt  restart_bot.sh  setup_binance_testnet.sh  setup_fast_market.py  start_bot.sh  test_bot.sh  test_comprehensive.sh  test_trading_bot.sh  trading_bot.py
templates/: dashboard.html  trading_view.html
